docs(state-router): update demo

--- a/packages/@sanity/state-router/demo/index.html
+++ b/packages/@sanity/state-router/demo/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>State router</title>
+    <style>
+      html {
+      }
+      body {
+        -webkit-font-smoothing: antialiased;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./entry.tsx"></script>
+    <script type="module" src="/main.tsx"></script>
   </body>
 </html>
