--- a/dev/starter-cra-studio/public/index.html
+++ b/dev/starter-cra-studio/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,9 +27,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script>
       window.setImmediate = window.setTimeout
-
-      // For legacy sanity support
-      window.__DEV__ = true
     </script>
     <div id="root"></div>
     <!--
